--- a/mycartutils/src/main/res/layout/group.xml
+++ b/mycartutils/src/main/res/layout/group.xml
@@ -18,6 +18,7 @@
         android:layout_marginLeft="10dp"
         android:textSize="18sp"
         android:layout_weight="1"
+        android:maxLines="1"
         android:gravity="center_vertical"
         />
 
